--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -777,6 +777,7 @@ employeeMasterTitle = Employee Master
 employeeMasterLabelEmployeename = Employee Name
 employeeMasterLabelEmailId = Email Id
 employeeMasterLabelMobileNo = Mobile No.
+employeeMasterLabelDesignation = Designation
 employeeMasterLabelActive = Active
 commonBreederMasterBreedeLocationDetailEmployeeRole = Employee Role
 employeeMasterDetailTitle = Employee Master Detail
